# PandasPackage

./: .gitignore  README.md  pyproject.toml
src/PandasPackage/: __init__.py
src/PandasPackage/Factories/: PinInputWidgetFactory.py  UINodeFactory.py  __init__.py
src/PandasPackage/FunctionLibraries/: DataFilterLib.py  DataIOLib.py  DataProcessorLib.py  PlotLib.py
src/PandasPackage/Nodes/: DataViewerNode.py  HyperExcelReadNode.py  PlotViewerNode.py
src/PandasPackage/Pins/: DataFramePin.py  MatplotlibFigurePin.py  __init__.py
src/PandasPackage/Tools/: DataViewerTool.py  PlotViewerTool.py
src/PandasPackage/UI/: DataFrameDialog.py  DataFrameViewerWidget.py  FigureDialog.py  MixedDataViewerDialog.py  PlotViewerWidget.py  PropertiesDialog.py  UIDataAnalysisBaseNode.py  UIDataViewerNode.py  UIHyperExcelReadNode.py  _dialog_persistence.py  _pandas_table_model.py
